# rum

./: Cargo.toml  README.md
.github/workflows/: cross_compile.yml  release.yml
src/: main.rs  runs.rs
src/actions/: list.rs  mod.rs  open.rs  remove.rs  send_signal.rs  show_info.rs  start.rs
src/utils/: mod.rs  tail.rs
