[package]
name = "rum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
nix = "0.23"
fork = "0.1"
directories = "4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
notify = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipc-channel = "0.15"
anyhow = "1.0"
thiserror = "1.0"
clap = "3.0.0-beta.4"
dialoguer = "0.9"
termion = "1.5"
ctrlc = "3.2"
tabled = "0.3"
shell-words = "1.0"
