[package]
name = "rum"
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
nix = "0.23"
fork = "0.1"
directories = "4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
notify = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipc-channel = "0.15"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "3.1.0", features = ["derive"] }
dialoguer = "0.10"
termion = "1.5"
ctrlc = "3.2"
tabled = "0.5"
shell-words = "1.0"
