[package]
name = "rum"
version = "0.1.3"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["signal"] }
fork = "0.2"
directories = "5.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
notify = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipc-channel = "0.18"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5.0", features = ["derive"] }
dialoguer = "0.11"
termion = "1.5"
ctrlc = "3.2"
tabled = "0.16"
shell-words = "1.0"
colored = "2.1.0"
